# opensea-operations

./: .travis.yml  BUILDING.md  CONTRIBUTING.md  LICENSE.md  README.md  meson.build  opensea-operations-doxygen-generator  update-version.sh
Make/UEFI/: copy_files.sh  opensea-operations.dec  opensea-operations.dsc  opensea-operations.inf
Make/VS.2013/opensea-operations/: opensea-operations.sln
Make/VS.2013/opensea-operations/opensea-operations/: opensea-operations.vcxproj  opensea-operations.vcxproj.filters
Make/VS.2013/opensea-operations/opensea-operations-DLL/: opensea-operations-DLL.vcxproj  opensea-operations-DLL.vcxproj.filters
Make/VS.2015/opensea-operations/: opensea-operations.sln
Make/VS.2015/opensea-operations/opensea-operations/: opensea-operations.vcxproj  opensea-operations.vcxproj.filters
Make/VS.2015/opensea-operations/opensea-operations-DLL/: opensea-operations-DLL.vcxproj  opensea-operations-DLL.vcxproj.filters
Make/VS.2017/opensea-operations/opensea-operations/: opensea-operations.vcxproj  opensea-operations.vcxproj.filters
Make/VS.2017/opensea-operations/opensea-operations-DLL/: opensea-operations-DLL.vcxproj  opensea-operations-DLL.vcxproj.filters
Make/VS.2017/opensea-operations/opensea-operations/Win32/Static-Release/opensea-.A0771494.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  opensea-operationsLib.lastbuildstate
Make/VS.2019/opensea-operations/: opensea-operations.sln
Make/VS.2019/opensea-operations/opensea-operations/: opensea-operations.vcxproj  opensea-operations.vcxproj.filters
Make/VS.2019/opensea-operations/opensea-operations-DLL/: opensea-operations-DLL.vcxproj  opensea-operations-DLL.vcxproj.filters
Make/VS.2022/opensea-operations/opensea-operations/: opensea-operations.vcxproj  opensea-operations.vcxproj.filters
Make/VS.2022/opensea-operations/opensea-operations-DLL/: opensea-operations-DLL.vcxproj  opensea-operations-DLL.vcxproj.filters
Make/gcc/: Makefile
Make/gccWin/: Makefile.gccWin
Make/prj/: opensea-operations.vpj  opensea-operations.vpw
Make/vmware/: Makefile
include/: ata_Security.h  ata_device_config_overlay.h  buffer_test.h  cdl.h  defect.h  depopulate.h  device_statistics.h  drive_info.h  dst.h  farm_log.h  firmware_download.h  format.h  format_unit.h  generic_tests.h  host_erase.h  logs.h  nvme_operations.h  opensea_operation_version.h  operations.h  operations_Common.h  partition_info.h  power_control.h  reservations.h  sanitize.h  sas_phy.h  sata_phy.h  seagate_operations.h  sector_repair.h  set_max_lba.h  set_sector_size.h  smart.h  trim_unmap.h  writesame.h  zoned_operations.h
src/: ata_Security.c  ata_device_config_overlay.c  buffer_test.c  cdl.c  defect.c  depopulate.c  device_statistics.c  drive_info.c  dst.c  farm_log.c  firmware_download.c  format.c  format_unit.c  generic_tests.c  host_erase.c  logs.c  nvme_operations.c  operations.c  partition_info.c  power_control.c  reservations.c  sanitize.c  sas_phy.c  sata_phy.c  seagate_operations.c  sector_repair.c  set_max_lba.c  set_sector_size.c  smart.c  trim_unmap.c  writesame.c  zoned_operations.c
